# alarm_panel

./: .gitignore  README.md  install.cmd  platformio.ini  preview.html  sdkconfig.control-freenove-devkit  sdkconfig.control-freenove-devkit.old  sdkconfig.control-m5stack-core2  sdkconfig.control-m5stack-core2.old  sdkconfig.control-matouch_parallel_43  sdkconfig.control-waveshare_lcd_4_3  sdkconfig.control-waveshare_lcd_4_3.old  visualfa.py  vite_clasp.py
common/include/: alarm.h  config.h  display.h  httpd.h  httpd_content.h  httpd_epilogue.h  i2c.h  network.h  power.h  serial.h  spi.h  task.h  ui.h  ws_server.h
common/include/assets/: icons.h
common/src/: alarm.c  control.cpp  ui.cpp  ws_server.c
data/: hello.txt
host_win32/: CMakeLists.txt  README.md  host_win32.code-workspace  log.txt  main.cpp  rebuild_clasp.cmd
host_win32/src/: base64.c  display.cpp  httpd.c  i2c.c  main.c  main.cpp  network.c  power.c  serial.c  sha1.c  spi.c  task.c
include/: alarm_common.hpp  config.h  fs.h  fs.hpp  httpd.hpp  httpd_content.h  i2c.h  i2c.hpp  power.hpp  serial.hpp  spi.hpp  ui.hpp  wifi.hpp
include/assets/: icons.hpp
react-web/: index.html
react-web/public/: .404.clasp  .500.clasp
react-web/public/api/: index.clasp
react-web/src/: App.css  App.tsx  default.js
src/: CMakeLists.txt  slave.cpp
src-control/: display.c  fs.c  httpd.c  i2c.c  main.c  network.c  serial.c  task.c
src-esp-idf/: alarm_common.cpp  control.cpp  display.c  display.cpp  fs.cpp  httpd.c  httpd.cpp  i2c.c  main.c  main.cpp  power.c  power.cpp  serial.c  serial.cpp  spi.c  spi.cpp  ui.cpp  wifi.cpp
src-slave/: CMakeLists.txt  slave.cpp
win32_www/: CMakeLists.txt  rebuild_clasp.cmd  rebuild_react.cmd
win32_www/include/: httpd.h  ws_server.h
win32_www/src/: httpd.c  main.cpp  ws_server.c
